--- a/results/cachehit/README
+++ b/results/cachehit/README
@@ -1,2 +1,5 @@
 6 concurrent clients.
 90000 cache hit in total.
+Time taken for tests:   39.109 seconds
+Time per request:       2.634 [ms] (mean)
+Time per request:       0.439 [ms] (mean, across all concurrent requests)
