--- a/results/cachemiss/README
+++ b/results/cachemiss/README
@@ -1,2 +1,6 @@
 6 concurrent clients
 10000 cache miss in total
+Time taken for tests:   42.736 seconds
+Time per request:       25.642 [ms] (mean)
+Time per request:       4.274 [ms] (mean, across all concurrent requests)
+
